force-app/main/default/objects/RelationshipSetting__mdt/RelationshipSetting__mdt.object-meta.xml
<CustomObject>
    <label>RelationshipSetting</label>
    <pluralLabel>RelationshipSettings</pluralLabel>
</CustomObject>