force-app/main/default/objects/RelationshipSetting__mdt/fields/ChildFieldNew__c.field-meta.xml
<CustomField>
    <fullName>ChildFieldNew__c</fullName>
    <label>ChildFieldNew</label>
    <length>255</length>
    <type>Text</type>
</CustomField>