force-app/main/default/objects/RelationshipSetting__mdt/fields/ChildObjectNew__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectNew__c</fullName>
    <label>ChildObjectNew</label>
    <length>255</length>
    <type>Text</type>
</CustomField>