force-app/main/default/objects/RelationshipSetting__mdt/fields/ChildRelationshipField__c.field-meta.xml
<CustomField>
    <fullName>ChildRelationshipField__c</fullName>
    <label>ChildRelationshipField</label>
    <metadataRelationshipControllingField>RelationshipSetting__mdt.ChildObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RelationshipSettings1</relationshipLabel>
    <relationshipName>RelationshipSettings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>