force-app/main/default/objects/RelationshipSetting__mdt/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <label>ParentObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RelationshipSettings1</relationshipLabel>
    <relationshipName>RelationshipSettings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>